REGRESSION (r269657): ASSERTION FAILED: Completion handler should always be called under WebKit::GPUProcessProxy::~GPUProcessProxy https://bugs.webkit.org/show_bug.cgi?id=218807 <rdar://problem/71285627>

Reviewed by Geoffrey Garen.

GPUProcessProxy::sendPrepareToSuspend() was failing to send the IPC to the GPUProcess and was also
failing to call its completion handler, thus asserting in Debug. Update GPUProcessProxy to actually
send the PrepareToSuspend / ProcessDidResume IPCs to the GPUProcess. The GPUProcess actually already
had an implementation to deal with those IPCs.

No new tests, covered by existing tests that are crashing in debug.

* GPUProcess/GPUProcess.messages.in:
* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::sendPrepareToSuspend):
(WebKit::GPUProcessProxy::sendProcessDidResume):
* UIProcess/GPU/GPUProcessProxy.h:


Canonical link: https://commits.webkit.org/231469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269690 268f45cc-cd09-0410-ab3c-d52691b4dbfc